gnome-terminal (2.14.1-2) UNRELEASED; urgency=low

  * List fatalerror as the primary maintainer.

 -- Josselin Mouette <joss@debian.org>  Sat, 29 Apr 2006 02:39:09 +0200

gnome-terminal (2.14.1-1) unstable; urgency=low

  * New upstream release.

 -- Guilherme de S. Pastore <gpastore@debian.org>  Fri, 21 Apr 2006 12:34:04 -0300

gnome-terminal (2.14.0-1) unstable; urgency=low

  * New upstream release.

 -- Guilherme de S. Pastore <guilherme.pastore@terra.com.br>  Sat, 18 Mar 2006 13:13:33 -0300

gnome-terminal (2.13.93-1) experimental; urgency=low

  * New upstream release
    - Tabs can be dragged and dropped. (Closes: #240139, #265736)
    - Pre-selects the window/tab title on edit. (Closes: #305678)
  * debian/patches:
    - tab-change.patch: dropped; fixed upstream.
    - 03_menu_entry.patch: dropped; applied upstream.
    - translation_warning.patch: dropped; fixed upstream.
  * debian/gnome-terminal-data.install:
    - do not install /usr/share/application-registry, it has been
      dropped and deprecated upstream.  

 -- Guilherme de S. Pastore <guilherme.pastore@terra.com.br>  Sat,  4 Mar 2006 15:46:20 -0300

gnome-terminal (2.12.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Josselin Mouette <joss@debian.org>  Sun,  8 Jan 2006 17:10:23 +0100

gnome-terminal (2.12.0-1) experimental; urgency=low

  * New upstream releases.
    - Update watch file. [debian/watch]
  * New patch from Ubuntu to move the menu entry to utilities/accessories.
    [debian/patches/03_menu_entry.patch]
  * Add CDBS' utils. [debian/rules]
  * Clarify Copyright versus License. [debian/copyright]
  * Don't run scrollkeeper. [debian/rules]

 -- Loic Minier <lool@dooz.org>  Sat, 29 Oct 2005 20:44:07 +0200

gnome-terminal (2.10.0-3) UNRELEASED; urgency=low

  [ Josselin Mouette ]
  * Don't overwrite DEB_CONFIGURE_SCRIPT_ENV completely.
  Sebastien Bacher:
  * debian/control.in:
    - the data package replaces files.
  * debian/patches/translation_warning.patch: